Feature : Manage Provider email validation in update

--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -241,7 +241,7 @@
 						    <div id="oz-signup-input-group" class="input-group">
 						  	<dt>Seller Email Id</dt>
 						  	<dd>
-						  		<input type="text" name="provideremail" class="form-control" ng-model="editseller.provideremail" placeholder="email" required>
+						  		<input type="email" name="provideremail" class="form-control" ng-model="editseller.provideremail" placeholder="email" required>
 						  		<small style="color:red;" ng-show="((form.editSellerForm.provideremail.$dirty && form.editSellerForm.provideremail.$invalid) || (form.editSellerForm.provideremail.$invalid && form.editSellerForm.submitted))">*Please enter seller email id.</small>
 						  	</dd>		
 						    </div>
