Feature : Manage Provider Removed Category from edit

--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -344,7 +344,7 @@
 
                        <span class="bold"> Configurations : </span>
                          <p>	<em>
-                       No configurations defined for category - {{category.categoryname}}. Please contact  your admin to add product configurations 
+                       No configurations defined for category - {{category.categoryname}}. Please contact  your admin to add {{category.categoryname}} related product configurations 
 						</em></p>
                        </td>
                    </tr>
