Feature : Manage Provider save ,cancel button css

--- a/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
+++ b/src/app/ProviderWall/ManageSeller/views/oz.seller.manage.tpl.html
@@ -116,8 +116,8 @@
 					</div>	
 
 					<div id="oz-signup-input-group" class="input-group">
-						<button style="width: 49.5%;margin:.5px;background-color:transparent;border-color: #b3b3b3; color:black;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="cancelAddSeller()"><i class="fa fa-times"></i>&nbsp;&nbsp;Cancel</button>
-						<button style="width: 49.5%;margin:.5px;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="addSeller()"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
+						<button style="width: 48%;margin:.5px;background-color:transparent;border-color: #b3b3b3; color:black;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="cancelAddSeller()"><i class="fa fa-times"></i>&nbsp;&nbsp;Cancel</button>
+						<button style="width: 48%;margin:.5px;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary pull-right" ng-click="addSeller()"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
 					</div>
 
 				</form>	
@@ -293,8 +293,8 @@
 						</dl>		
 
 						<div id="oz-signup-input-group" class="input-group">
-							<button style="width: 49.2%;margin:.5px;background-color:transparent;border-color: #b3b3b3; color:black;font-weight:bold;border-radius:1px;" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>&nbsp;&nbsp;Cancel</button>
-							<button style="width: 49.2%;margin:.5px;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary" ng-click="editSeller(editseller.providerid)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
+							<button style="width: 48%;margin:.5px;background-color:transparent;border-color: #b3b3b3; color:black;font-weight:bold;border-radius:1px;" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i>&nbsp;&nbsp;Cancel</button>
+							<button style="width: 48%;margin:.5px;background-color:#EC670D;border-color: #E47814;font-weight:bold;border-radius:1px;" class="btn btn-primary pull-right" ng-click="editSeller(editseller.providerid)"><i class="fa fa-save"></i>&nbsp;&nbsp;Save</button>
 						</div>
 
 					</form>	
