--- a/src/app/index.html
+++ b/src/app/index.html
@@ -33,7 +33,7 @@
 		<div class="oz-navbar navbar navbar-inverse navbar-static-top" role="navigation">
   		<div id="oz-navbar-container" class="">
    			<a id="oz-navbar-brand" class="navbar-brand" href="#">
-          <img style="width:40px;" src="assets/images/orderzapp.png">&nbsp;sellers
+          <img style="width:2.500em;" src="assets/images/orderzapp.png">&nbsp;sellers
    			</a>
 
         <ul id="oz-navbar-ul" ng-cloak class="oz-navbar-li nav navbar-nav navbar-right" ng-show="usersession.isLoggedIn">
