--- a/src/app/assets/css/oz.css
+++ b/src/app/assets/css/oz.css
@@ -570,8 +570,9 @@ background-color: white;
 .oz-fixedPosition{
   position: fixed;
   left: 11%;
-  top: 9.2%;
-  width: 62%;
+  margin-top: -10px;
+  /*top: 9.2%;*/
+  width: 62.2%;
   visibility: visible;
   z-index: 104;
   background-color: rgb(58, 53, 53);
