--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.display.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.display.tpl.html
@@ -21,7 +21,7 @@
 			</table>
 		</div>
 	</div>
-	<div ng-show="AllBranchAreaList.length == 0" style="padding:40px; opacity: .8; margin:40px; margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px;" class="row">
+	<div ng-show="AllBranchAreaList.length == 0" style="padding:40px; opacity: .8; margin-bottom: 1px; color: rgb(80, 74, 74);background-color:#F1F1F1; letter-spacing: 1px;" class="row">
     <div class="col-md-12">
       <div class="no-message">
         <center>
