--- a/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.manage.tpl.html
+++ b/src/app/ProviderWall/ManageDeliveryCharges/views/oz.deliverycharges.manage.tpl.html
@@ -3,7 +3,7 @@
 		<div class="col-md-6">
 			<div id="tabs" >
 				<ul id="tabPrice" class=" policyTab nav nav-pills nav-justified">
-				  <li ng-class="active3" class="tabPolicyLi active"><a showtab="" href="" ui-sref="managedeliverycharges.view.display">View Area Coverage</a></li>
+				  <li ng-class="active3" class="tabPolicyLi active"><a showtab="" href="" ui-sref="managedeliverycharges.view.display" ng-click="viewAvailableAreaList()">View Area Coverage</a></li>
 				  <li ng-class="active3" class="tabPolicyLi"><a showtab="" href="" ui-sref="managedeliverycharges.view.manage">Manage Area Coverage</a></li>
 				</ul>
 			</div>
