--- a/src/app/ProviderWall/ManagePickupAddress/views/oz.seller.pickupaddress.manage.tpl.html
+++ b/src/app/ProviderWall/ManagePickupAddress/views/oz.seller.pickupaddress.manage.tpl.html
@@ -30,17 +30,17 @@
                 <small style="color:red;" ng-show="((form.addPickupAddress.addressline2.$dirty && form.addPickupAddress.addressline2.$invalid) || (form.addPickupAddress.addressline2.$invalid && form.addPickupAddress.submitted))">*Please enter address line 2.</small>
               </td>
               <td width="25%;">
-                <input type="text" name="country" class="form-control" ng-model="pickup.country" placeholder="country" ng-pattern="/^[a-zA-Z]*$/" required>
+                <input type="text" name="country" class="form-control" ng-model="pickup.country" placeholder="country" ng-pattern="/^[^0-9]*$/" required>
                 <small style="color:red;" ng-show="((form.addPickupAddress.country.$dirty && form.addPickupAddress.country.$invalid) || (form.addPickupAddress.country.$invalid && form.addPickupAddress.submitted))">*Please enter valid country.</small>
               </td>
               <td width="25%;">
-                <input name="state" class="form-control" type="text" placeholder="state" ng-pattern="/^[a-zA-Z]*$/" required ng-model="pickup.state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(pickup.state)" />
+                <input name="state" class="form-control" type="text" placeholder="state" ng-pattern="/^[^0-9]*$/" required ng-model="pickup.state" typeahead="state for state in states | filter:$viewValue | limitTo:6" typeahead-on-select="getCityForState(pickup.state)" />
                 <small style="color:red;" ng-show="((form.addPickupAddress.state.$dirty && form.addPickupAddress.state.$invalid) || (form.addPickupAddress.state.$invalid && form.addPickupAddress.submitted))">*Please enter valid state.</small>
               </td>
             </tr>
             <tr>  
               <td width="25%;">
-                <input name="city" class="form-control" type="text" placeholder="city" ng-pattern="/^[a-zA-Z]*$/" required ng-model="pickup.city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(pickup.city)" />
+                <input name="city" class="form-control" type="text" placeholder="city" ng-pattern="/^[^0-9]*$/" required ng-model="pickup.city" typeahead="city for city in cities | filter:$viewValue | limitTo:6" typeahead-on-select="getZipcodeForCity(pickup.city)" />
                 <small style="color:red;" ng-show="((form.addPickupAddress.city.$dirty && form.addPickupAddress.city.$invalid) || (form.addPickupAddress.city.$invalid && form.addPickupAddress.submitted))">*Please enter valid city.</small>
               </td>
               <td width="25%;">
@@ -95,22 +95,22 @@
               </td>
     					<td ng-show="(CurrentAddressIndex !== $index)">{{address.area}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
-                <input type="text" name="editarea" class="form-control" ng-model="editpickup.area" placeholder="area" ng-pattern="/^[a-zA-Z]*$/" required>
+                <input type="text" name="editarea" class="form-control" ng-model="editpickup.area" placeholder="area" required>
                 <small style="color:red;" ng-show="((form.editPickupAddress.editarea.$dirty && form.editPickupAddress.editarea.$invalid) || (form.editPickupAddress.editarea.$invalid && form.editPickupAddress.submitted))">*Please enter area.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.city}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
-                <input type="text" name="editcity" class="form-control" ng-model="editpickup.city" placeholder="city" ng-pattern="/^[a-zA-Z]*$/" required>
+                <input type="text" name="editcity" class="form-control" ng-model="editpickup.city" placeholder="city" ng-pattern="/^[^0-9]*$/" required>
                 <small style="color:red;" ng-show="((form.editPickupAddress.editcity.$dirty && form.editPickupAddress.editcity.$invalid) || (form.editPickupAddress.editcity.$invalid && form.editPickupAddress.submitted))">*Please enter city.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.state}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
-                <input type="text" name="editstate" class="form-control" ng-model="editpickup.state" placeholder="state" ng-pattern="/^[a-zA-Z]*$/" required>
+                <input type="text" name="editstate" class="form-control" ng-model="editpickup.state" placeholder="state" ng-pattern="/^[^0-9]*$/" required>
                 <small style="color:red;" ng-show="((form.editPickupAddress.editstate.$dirty && form.editPickupAddress.editstate.$invalid) || (form.editPickupAddress.editstate.$invalid && form.editPickupAddress.submitted))">*Please enter state.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.country}}</td>
               <td ng-show="(editAddress && (CurrentAddressIndex == $index))">
-                <input type="text" name="editcountry" class="form-control" ng-model="editpickup.country" placeholder="country" ng-pattern="/^[a-zA-Z]*$/" required>
+                <input type="text" name="editcountry" class="form-control" ng-model="editpickup.country" placeholder="country" ng-pattern="/^[^0-9]*$/" required>
                 <small style="color:red;" ng-show="((form.editPickupAddress.editcountry.$dirty && form.editPickupAddress.editcountry.$invalid) || (form.editPickupAddress.editcountry.$invalid && form.editPickupAddress.submitted))">*Please enter country.</small>
               </td>
               <td ng-show="(CurrentAddressIndex !== $index)">{{address.zipcode}}</td>
