added delivery time structure

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -81,6 +81,7 @@
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="manageproduct.view">Manage Product</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="manageprices.view">Manage Prices</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managediscount.view">Manage Discount</a></li>
+              <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="deliverytime.view">Manage Delivery Time</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managedeliverycharges.view.display">Manage Delivery Charges</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref='manageproductavailability.view'>Manage Product Availability</a></li>
               <li><a ng-show="selectedproviderid && selectedBranchId" href="" ui-sref="managepolicy.view">Manage Policy</a></li>
@@ -162,6 +163,8 @@
   <script src = "ProviderWall/ManageSeller/js/ManageSellerService.js" ></script>
   <script src = "ProviderWall/ManageDeliveryCharges/js/ManageDeliveryChargesController.js" ></script>
   <script src = "ProviderWall/ManageDeliveryCharges/js/DeliveryChargesService.js" ></script>
+  <script src = "ProviderWall/ManageDeliveryTime/js/ManageDeliveryTimeController.js" ></script>
+  <script src = "ProviderWall/ManageDeliveryTime/js/ManageDeliveryTimeService.js" ></script>
   <script type="text/javascript" src = 'ProviderWall/ManageProductAvailability/js/OZProductAvailabilityController.js'></script>
   <script type="text/javascript" src = 'OrderZapp/oz/js/OZManageLocation.js'></script>
   <!-- // <script src = 'OrderZapp/oz/js/OZProductConfigurationManagementController.js'></script> -->
