Feature - Manage product Lead time

--- a/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
+++ b/src/app/ProviderWall/ManageProduct/views/oz.providerContent.manageProduct.tpl.html
@@ -211,7 +211,7 @@
 
                         </td>
 
-                        <td colspan="2"><span class="bold"> Lead Time Option</span>
+                        <td colspan="2"><span class="bold"> Lead Time Unit</span>
                             <select  class=" form-control" ng-model="product.leadtime.option" ng-options="option for option in leadOptions" name="option" required ></select>
 
                               <div  ng-show="(form.productForm.optionuom.$dirty  && editMode.editorEnabled==true ) ||(form.productForm.submitted==true && form.productForm.option.$invalid==true)" class="prodo-product-Invalid">
